--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,16 @@
+body{
+    background: url('../images/logo.jpeg') no-repeat center bottom;
+}
+
 .container{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
     height: 100vh;
+    background: url('../images/flower.png') no-repeat center bottom;
+    /* background-size: cover; */
 }
 
