before adding bootstrap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background: url('../images/logo.jpeg') no-repeat center bottom;
+    /* background: url('../images/logo.jpeg') no-repeat center bottom; */
 }
 
 .container{
