--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,6 +17,8 @@
         <p>Coming Soon...</p>
     </div>
 
+    <div class="pic"><img src=<%= require("./images/logo.jpeg")%> alt=""></div>
+
 </body>
 
 </html>
