--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,6 @@
-body{
-    /* background: url('../images/logo.jpeg') no-repeat center bottom; */
-}
+/* body{
+    background: url('../images/logo.jpeg') no-repeat center bottom;
+} */
 
 .container{
     position: relative;
