--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     text-align: center;
     height: 100vh;
-    background: url('../images/flower.png') no-repeat center bottom;
+    background: url('../images/m.svg') no-repeat center bottom;
     /* background-size: cover; */
 }
 
