--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,6 +12,20 @@
 
 <body>
 
+     
+
+<a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Link with href
+      </a>
+      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        Button with data-target
+      </button>
+      <div class="collapse" id="collapseExample">
+        <div class="well">
+          Hey there!
+        </div>
+      </div>
+
     <div class="container">
         <h1 class="temp">Panco's HomePage!</h1>
         <p>Coming Soon...</p>
