materialize added/working

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,19 +12,12 @@
 
 <body>
 
-     
-
-<a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Link with href
-      </a>
-      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Button with data-target
-      </button>
-      <div class="collapse" id="collapseExample">
-        <div class="well">
-          Hey there!
-        </div>
-      </div>
+        <div class="collection">
+                <a href="#!" class="collection-item">Alvin</a>
+                <a href="#!" class="collection-item active">Alvin</a>
+                <a href="#!" class="collection-item">Alvin</a>
+                <a href="#!" class="collection-item">Alvin</a>
+         </div>
 
     <div class="container">
         <h1 class="temp">Panco's HomePage!</h1>
