--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
+@import url("../../node_modules/materialize-css/dist/css/materialize.min.css");
+
 /* body{
     background: url('../images/logo.jpeg') no-repeat center bottom;
 } */
@@ -10,7 +12,7 @@
     flex-direction: column;
     text-align: center;
     height: 100vh;
-    background: url('../images/m.svg') no-repeat center bottom;
+    background: url('../images/flower.png') no-repeat center bottom;
     /* background-size: cover; */
 }
 
