--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,7 +17,21 @@
                 <a href="#!" class="collection-item active">Alvin</a>
                 <a href="#!" class="collection-item">Alvin</a>
                 <a href="#!" class="collection-item">Alvin</a>
-         </div>
+              </div>
+
+
+  <!-- Dropdown Trigger -->
+  <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Drop Me!</a>
+  
+    <!-- Dropdown Structure -->
+    <ul id='dropdown1' class='dropdown-content'>
+      <li><a href="#!">one</a></li>
+      <li><a href="#!">two</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">three</a></li>
+      <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+      <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+    </ul>
 
     <div class="container">
         <h1 class="temp">Panco's HomePage!</h1>
