--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,33 +12,125 @@
 
 <body>
 
-        <div class="collection">
-                <a href="#!" class="collection-item">Alvin</a>
-                <a href="#!" class="collection-item active">Alvin</a>
-                <a href="#!" class="collection-item">Alvin</a>
-                <a href="#!" class="collection-item">Alvin</a>
+       
+
+        <form action="#">
+                <p>
+                  <input type="checkbox" id="test5" />
+                  <label for="test5">Red</label>
+                </p>
+                <p>
+                  <input type="checkbox" id="test6" checked="checked" />
+                  <label for="test6">Yellow</label>
+                </p>
+                <p>
+                  <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
+                  <label for="filled-in-box">Filled in</label>
+                </p>
+                <p>
+                  <input type="checkbox" id="indeterminate-checkbox" />
+                  <label for="indeterminate-checkbox">Indeterminate Style</label>
+                </p>
+                <p>
+                  <input type="checkbox" id="test7" checked="checked" disabled="disabled" />
+                  <label for="test7">Green</label>
+                </p>
+                <p>
+                  <input type="checkbox" id="test8" disabled="disabled" />
+                  <label for="test8">Brown</label>
+                </p>
+              </form>
+
+              <form action="#">
+                    <p class="range-field">
+                      <input type="range" id="test5" min="0" max="100" />
+                    </p>
+                  </form>
+
+                  <div id="test-slider"></div>
+                    
+
+
+    <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+              <label for="first_name">First Name</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="last_name" type="text" class="validate">
+              <label for="last_name">Last Name</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+              <label for="disabled">Disabled</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              This is an inline input field:
+              <div class="input-field inline">
+                <input id="email" type="email" class="validate">
+                <label for="email" data-error="wrong" data-success="right">Email</label>
               </div>
+            </div>
+          </div>
+        </form>
+      </div>
 
+        <!-- Switch -->
+  <div class="switch">
+        <label>
+          Off
+          <input type="checkbox">
+          <span class="lever"></span>
+          On
+        </label>
+      </div>
+    
+      <!-- Disabled Switch -->
+      <div class="switch">
+        <label>
+          Off
+          <input disabled type="checkbox">
+          <span class="lever"></span>
+          On
+        </label>
+      </div>
 
-  <!-- Dropdown Trigger -->
-  <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Drop Me!</a>
-  
-    <!-- Dropdown Structure -->
-    <ul id='dropdown1' class='dropdown-content'>
-      <li><a href="#!">one</a></li>
-      <li><a href="#!">two</a></li>
-      <li class="divider"></li>
-      <li><a href="#!">three</a></li>
-      <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-      <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
-    </ul>
+      <form action="#">
+            <div class="file-field input-field">
+              <div class="btn">
+                <span>File</span>
+                <input type="file">
+              </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text">
+              </div>
+            </div>
+          </form>
 
-    <div class="container">
+    <!-- <div class="container">
         <h1 class="temp">Panco's HomePage!</h1>
         <p>Coming Soon...</p>
-    </div>
+    </div> -->
 
-    <div class="pic"><img src=<%= require("./images/logo.jpeg")%> alt=""></div>
+    <!-- <div class="pic"><img src=<%= require("./images/logo.jpeg")%> alt=""></div> -->
 
 </body>
 
